v0.4.1: Refactor much code; Add more widgets (#9)
* Rename classes

* Update to 1.21.10

* Revert rendering bug fix for 1.21.9

* Add open-book-key condition

* Fix shoulder-parrot rendering

* Fix highlight lag and hollow

* Add wandering trader retain widget

* Refactor skills

* Add icon

* Adapt to ModMenu

* Add sheep eat grass widget

* Add book to group; Add book trade offer

* Implement property bandle; Refactor variant widgets

* Refactor EntityProperty

* Rename 'tag' to 'nbt

* Refactor CodecProperty

* Improve variant property

* Refactor List.of to Arrays.asList

* Fix highlight rendering bug

* Add stealing screen

* Improve stealing screen

* Implement mob persistence widget

* Refactor code

* Refactor skills & registrars

* Update to 1.21.11 (not compilable)

* Update to 1.21.11 (basically runnable)

* Update to 1.21.11

* Minor fixes and adjustments

* Improve inventory stealing screen

* Improve inventory stealing screen

* Improve inventory stealing screen

* Improve inventory stealing screen

* Improve the theft mechanism

* Bug fix & refactor code

* Factor packet payloads

* Add test cases